--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 #+STARTUP: all
-#+DATE: Time-stamp: <2020-03-08>
+#+DATE: Time-stamp: <2020-03-09>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline
 #+OPTIONS: author:t c:nil creator:comment d:(not "LOGBOOK") date:t
@@ -33,11 +33,11 @@ The GNU-Emacs major mode for the programming language APDL
 Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
 
 * Introduction
-  APDL ([[https://de.wikipedia.org/wiki/ANSYS_Parametric_Design_Language][ANSYS Parametric Design Language]]) is the solver scripting
-  language of the mechanical FEA (Finite Element Analysis) suite [[http://www.ansys.com][ANSYS]]
+  APDL ([[https://de.wikipedia.org/wiki/Ansys_Parametric_Design_Language][Ansys Parametric Design Language]]) is the solver scripting
+  language of the mechanical FEA (Finite Element Analysis) suite [[http://www.ansys.com][Ansys]]
   (ANalysis SYStem, registered TM).
 
-  APDL-Mode (formerly ANSYS-Mode) is - in conjunction with the
+  APDL-Mode (formerly Ansys-Mode) is - in conjunction with the
   GNU-Emacs editor - an advanced APDL environment with features like,
   pin-pointing the APDL reference documentation, keyword completion,
   code templates, dedicated highlighting, solver communication
@@ -46,10 +46,10 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
   models in APDL code. Please convince yourself with the APDL-Mode
   in-depth documentation.
 
-  With the advent of the modern ANSYS GUIs - like `WorkBench' or
+  With the advent of the modern Ansys GUIs - like `WorkBench' or
   `Discovery AIM' - the usage of APDL as a wholesale modelling
   language has diminished for non automated tasks.  But APDL is here
-  to stay: `WorkBench' and `AIM' operate exclusively the ANSYS solver
+  to stay: `WorkBench' and `AIM' operate exclusively the Ansys solver
   with it!  They are producing and sending APDL input (.dat) files to
   the solver.  For a true understanding of the GUIs' inner workings a
   study of their APDL code is prerequisite!  Moreover, the GUIs are
@@ -59,7 +59,7 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
   Nowadays I find APDL-Mode mostly useful for studying solver (.dat)
   files which were created by WorkBench.  And, especially, for writing
   WorkBench `Command' snippets and inspecting longer snippets from
-  other sources.  Accessing swiftly the ANSYS APDL reference
+  other sources.  Accessing swiftly the Ansys APDL reference
   documentation alone is worth using APDL-Mode!
 
   When you "Export" (or "Import") such a WorkBench Command (APDL)
@@ -81,14 +81,14 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
 
    [[file:doc/parameter_help2.png]]
 
-** Pin-pointing the relevant ANSYS documentation
-   You can trigger (*C-c C-b*) the relevant ANSYS manual entry
+** Pin-pointing the relevant Ansys documentation
+   You can trigger (*C-c C-b*) the relevant Ansys manual entry
    directly from your APDL-Mode session without the detour of
-   searching in the ANSYS online help (default since V19).  This works
+   searching in the Ansys online help (default since V19).  This works
    not only for APDL commands but also element names and other manual
-   topics. (To that end you must have started / registered the ANSYS
-   online help once from an ANSYS product.  But I recommend installing
-   the ANSYS documentation locally, loading is much faster.)
+   topics. (To that end you must have started / registered the Ansys
+   online help once from an Ansys product.  But I recommend installing
+   the Ansys documentation locally, loading is much faster.)
 
    The image below is showing a manual entry in GNU-Emacs's EWW
    browser. You are able to consult the manual side-by-side with your
@@ -147,7 +147,7 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
 
 * Usage
   Please type `M-x apdl' which opens a buffer in APDL-Mode and you can
-  inspect the menu bar's `APDL' and `ANSYS' entries.  Please select
+  inspect the menu bar's `APDL' and `Ansys' entries.  Please select
   `Describe APDL-Mode' (or type `C-h m'), which will display the
   mode's help with further guidance.
 
@@ -158,8 +158,8 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
 * Configuration and Customisation
   Most functionality of APDL-Mode is working without additional
   configurations.  APDL-Mode should be intelligent enough to figure
-  out ANSYS installation dependent configurations.  (It uses by
-  default the highest installed ANSYS version.)
+  out Ansys installation dependent configurations.  (It uses by
+  default the highest installed Ansys version.)
 
   I recommend configuring GNU-Emacs to autoload APDL-Mode for certain
   file endings, especially the `.mac' suffix.  Please read
@@ -173,22 +173,22 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
    - Emacs [[http://emacs.stackexchange.com][Stackexchange]], the question and answer site.
    - [[http://www.emacswiki.org][EmacsWiki]], an encyclopedia for GNU-Emacs
 ** Other APDL editor resources
-   - The ANSYS [[https://catalog.ansys.com/product/5b3bc6857a2f9a5c90d32ddb/apdl-editor][APDL plug-in]] from the Ansys store, published in 2017
+   - The Ansys [[https://catalog.ansys.com/product/5b3bc6857a2f9a5c90d32ddb/apdl-editor][APDL plug-in]] from the Ansys store, published in 2017
      (and not maintained since then?)
    - Simple APDL syntax highlighting extensions are available for
      various editors, gvim, nedit, ... to name a few, please have a
-     look at [[http://ansys.net][ANSYS.net]].
+     look at [[http://ansys.net][Ansys.net]].
    - A commercial competitor of apdl-mode: The [[http://www.padtinc.com/pedal][Pedal]] script editor for
      Windows, project disbanded in 2015.
    - A free Windows [[http://apdl.de][APDL editor]], site not maintained since 2011
-** ANSYS and APDL resources
-   - The online ANSYS [[https://ansyshelp.ansys.com/][reference manuals]] (registration required) and
-     the ANSYS [[https://www.youtube.com/channel/UCdymxOTZSP8RzRgFT8kpYpA][online videos]] on YouTube
-   - The [[http://www.ansys.com][ANSYS homepage]] with the ANSYS Portal and Learning Hub
-   - Xansys, an [[http://www.xansys.org][ANSYS online community]] (forum registration is necessary)
+** Ansys and APDL resources
+   - The online Ansys [[https://ansyshelp.ansys.com/][reference manuals]] (registration required) and
+     the Ansys [[https://www.youtube.com/channel/UCdymxOTZSP8RzRgFT8kpYpA][online videos]] on YouTube
+   - The [[http://www.ansys.com][Ansys homepage]] with the Ansys Portal and Learning Hub
+   - Xansys, an [[http://www.xansys.org][Ansys online community]] (forum registration is necessary)
    - The [[http://www.padtinc.com/blog/the-focus/][PADT Focus]] site.
-   - A general  ANSYS repository [[http://www.ansys.net][ANSYS.net]]
-   - [[http://www.auc-ev.de/][AUC]], the ANSYS User Club eV. in Germany
+   - A general  Ansys repository [[http://www.ansys.net][Ansys.net]]
+   - [[http://www.auc-ev.de/][AUC]], the Ansys User Club eV. in Germany
 * License
   The GPL v3, the GNU Public license.  There are no costs and no usage
   restrictions even in commercial application, please read the [[file:LICENSE.org][LICENSE]]
