--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-03-08>
+#+DATE: Time-stamp: <2020-03-09>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -16,6 +16,12 @@
 #+title: The TODO file of APDL-Mode
 
 * TODO Version 20.X
+** Todos, bugs
+   - C-u C-c C-b in browser for "All"stuff doesn't skip to subjects..,
+     does it for local help?
+   - M-C-i is not consistent with M-?! The mix of Ansys v195 and docu
+     v201 version..
+   - Ansys Classics can't be started and with the launcher
 ** minor bugs
    - Remove times stamp in *License* buffer when updating with `g'.
    - 1/en, en is variable but fraction not fontified?
@@ -26,46 +32,39 @@
 *** templates
     - Add more WorkBench/ Discovery AIM templates
     - intelligent template selector with keywords in the line of helm
-    - do we need interregion templates?
     - what is the advantage of ARG1-9? => parameter system, should I
       include ARG[1-9] optionally?
+    - do we need interregion templates?
 *** misc
     1) Melpa integration <= 2021?
     2) open EWW in another window!
     3) why initialising anew any time -mode is called?
     4) find nice style css stuff for html export?
-    5) integrate new Ansys logo in A-M logo and reverted back from ANSYS
-       to Ansys.
-    6) docu in info mode
-    7) how about deleting the unused branches?
-    8) Start optionally runbWB2 --aim, Discovery AIM
-    9) package-lint
-       - problems with prefix names and default key bindings...
-    10) ANSYS is often used synonymous for ANSYS MAPDL solver /
-	interpreter or ANSYS Classics GUI
-    11) checkdoc, flycheck etc. : from makefile
-** Proceedures
-    # ansys
-    (tags-query-replace "v193" "v201")
+    5) docu in info mode
+    6) Start optionally runbWB2 --aim, Discovery AIM
+    7) Ansys is often used synonymous for Ansys MAPDL solver /
+       interpreter or Ansys Classics GUI
+** Release proceedures
+   package-lint
+     - problems with prefix names and default key bindings...
+   checkdoc, flycheck etc. : from makefile
+    # copyright year
+    (tags-query-replace "- 2020" "- 2021")
+    # ansys version
+    (tags-query-replace "v195" "v201")
     # emacs
     (tags-query-replace "26\.3" "27.1")
     # for _mode_version
-    (tags-query-replace "20\.1\.0" "20.2.0")
-    (tags-query-replace "ansys+emacs2020.png" "ansys+emacs2020-03.png")
-#    (tags-query-replace "ANSYS" "Ansys") done
-    # copyright
-    (tags-query-replace "- 2020" "- 2021")
+    (tags-query-replace "20\.2\.0" "20.2.1")
+    # (tags-query-replace "ansys+emacs.png" "ansys+emacs2020.png")
+    # (tags-query-replace "ansys+emacs2020.png" "ansys+emacs2020-03.png")
+    # (tags-query-replace "ANSYS" "Ansys")
 
 * TODO 20.2.0 Release
   DEADLINE: <2020-04-08 Mi>
   Feature freeze [2020-02-27 Do]: Testing of the master branch
-  Update documentation, html brutally outdated, ..
-  - gh-pages:
-    - create a README.org copy from index.org?: Done
-    - makefile for htmls or is it org-mode publish: It is.
 ** Todos, bugs
 ** checks
-   - compile
    - check C-u C-c C-b with various topics )=> Works partly ;-)
    - Customisation system
    - changed file size without warning to 30 MB what is Emacs-26
@@ -94,7 +93,7 @@
      status to changed!
    - error for -skeleton-outline-template when called ansys-mode
      for an unnamed file without extension.
-   - APDL + WB -> Window Name is ... - Mechanical APDL (ANSYS
+   - APDL + WB -> Window Name is ... - Mechanical APDL (Ansys
      Structural)
 ** Freeze
    - Documentation of installation, usage and configuration!
@@ -119,7 +118,7 @@
      https://msdn.microsoft.com/en-us/library/aa383749.aspx
    # - switch off advising of M-w, yeah, yeah
    - C-c C-a does not take signs (e.g. +13.0, -8.3) befor numbers into account
-   - Targeting ANSYS Aim
+   - Targeting Ansys Aim
    - customisation :version attribute is not clear and not defined for
      new stuff
    - Mouse completion is working with *middle* mouse button (mouse-2) but only
@@ -164,11 +163,11 @@
      min, 2 min, etc.
    - check *vwrite with gui mode and interactive mode (graphics window?)
    - add element numbers to the general completion list, yes or no?
-   - WikEmacs, Melpa, GNU ELPA and/or marmalade, ANSYS-Mode debian
+   - WikEmacs, Melpa, GNU ELPA and/or marmalade, Ansys-Mode debian
      .deb package
    - HTML APDL documentation
      here is the tanslation of names to html files:
-     - link to ANSYS-Mode APDL reference:
+     - link to Ansys-Mode APDL reference:
      - Chapters of structural APDL documentation:
    - TODOS: in fontification.org
      - deletion of vectors *del,Vector without request? ,,nopr?
@@ -177,7 +176,7 @@
      - *vscfun: mean, stdev, ...
    - _RETURN (-mode) somewhat milder red, clashes with reseved vars!
    - test server specifications (menu!) make interconnect
-     conditional of the ANSYS version >= 120
+     conditional of the Ansys version >= 120
    - explain fill/*vfill under the "looping" commands: Generates a line
        of nodes between two existing nodes.
    - switch automatically to read only mode for *.dat files?
@@ -196,7 +195,7 @@
    - constraint equations in -ansys-template.el and get functions
    - enable hiding of geometry items in .anf files
    - fontification.el
-     - add the 4 ANSYS neutral file (aux15) functions to the parameter-help,
+     - add the 4 Ansys neutral file (aux15) functions to the parameter-help,
        .anf files from DM anf export
          kpt -- Write keypoints or vertices into the database
          lcurv -- Write lines or edges into the database
@@ -222,12 +221,12 @@
     + clearing of variables and
     + usage of variables before their definitions (uninitialised
       variables)
-    + the variable fontification might clash with ANSYS specifiers
+    + the variable fontification might clash with Ansys specifiers
     + string substitution of %variables% in strings does not highlight
        them in the proper variable face
   - Highlighting :: A label :LABEL may appear behind the /input
                     command and is not highlighted as label
-  - Highlighting :: An apostrophy clashes with the ANSYS "char"
+  - Highlighting :: An apostrophy clashes with the Ansys "char"
                     specifier Keybinding: M-Tab is captured under
                     Windows and some GNU-Linux desktops Workaround: Press
                     instead of M-Tab (ALT + TAB) the ESC key and then
@@ -239,9 +238,9 @@
   - Keybinding :: C-c C-j jjj not working with Emacs version < Emacs-24
   - Completion :: Of parametric function parentheses
 		  completes redundant closing parentheses
-  - Completion :: A mouse selection from the *ANSYS-completion* buffer
+  - Completion :: A mouse selection from the *Ansys-completion* buffer
                   is only inserted upcased.
-  - Completion :: ANSYS command 'C***' will not be completed
+  - Completion :: Ansys command 'C***' will not be completed
   - Skeleton :: Mouse selection of -structural-template does not work
                 (because of stipulated user text input from this skeleton)
   - Navigation ::  C-c { does not skip an overlay in a number-block
@@ -276,7 +275,7 @@
     # this is for Conti stuff
     (tags-query-replace "16.2.0" "17.1.0")
     (tags-query-replace "16.1.0" "16.2.0")
-    (tags-query-replace "ANSYS 16" "ANSYS 17")
+    (tags-query-replace "Ansys 16" "Ansys 17")
     # emacs
     (tags-query-replace "24\.5" "25.1")
     # version No
@@ -348,21 +347,21 @@
    - M-?: following a variable allocation with `='
    - M-?: In the last empty line displays overlay below command
      instead above
-   - Provide ANSYS command completion and command-help in comint
+   - Provide Ansys command completion and command-help in comint
      buffer
    - Include all inquiry functions (see UPF documentation)
    - Include the _RETURN value of the solid modelling commands into
      their help strings of parameter help.
-** ANSYS process and interpreter buffer
+** Ansys process and interpreter buffer
    example: gnuplot-mode
-   - call to start the ANSYS solution results tracker for .nlh (xml
+   - call to start the Ansys solution results tracker for .nlh (xml
      see file:file.nlh, contact forces) and convergence .gst (binary?,
      coded? file:file.gst)
    - implement something like [[file:nlhist.sh]] for .cnd files (xml see
      file:file.cnd) or use the new libxml parser ;-)
-   - make display-buffer "*ANSYS*" optional when sending commands to
-     the ANSYS process
-   - use ANSYS *env variables* like AWP_ROOT140 for checking
+   - make display-buffer "*Ansys*" optional when sending commands to
+     the Ansys process
+   - use Ansys *env variables* like AWP_ROOT140 for checking
      installation directories
    - check also the license status for hpc licenses if
      -no-of-processors is greater then 3
@@ -380,9 +379,9 @@
    - make filter of -license-status optional
    - optimise -start-run with query of y (start immediately),n
      (exit),e (change params),C-h (help)
-   - Splice any input line behind the BEGIN: symbol in the *ANSYS*
+   - Splice any input line behind the BEGIN: symbol in the *Ansys*
      buffer
-   - Enable one solver run for every ANSYS macro buffer
+   - Enable one solver run for every Ansys macro buffer
    - indicate with activation/inactivation of menu items that an
      asynchronous job is already running or not.
    - show/mark sent lines in apdl file C-c C-u, C-c C-c,
@@ -390,14 +389,14 @@
      + with background
      + maximum line
      + reset highlighting, when?
-   - provide ANSYS `y' request and carriage return? superflouous?  a
+   - provide Ansys `y' request and carriage return? superflouous?  a
      single `y' does the trick
    - Killing a buffer with a running process now asks a confirmation.
      You can remove this query in two ways: either removing
      `process-kill-buffer-query-function' from
      `kill-buffer-query-functions' or setting the appropriate process
      flag with `set-process-query-on-exit-flag'.
-    - finding an ANSYS /filnam command in current macro file and
+    - finding an Ansys /filnam command in current macro file and
       suggesting this as current job-name optionally kill old job when
       called again with working run warn and optionally remove the
       ansys lock file before starting a run
@@ -409,13 +408,13 @@
    - add a preview mode, with its own keymap for faster editing and
      copying, like dired
    - enhance abbrev definitions for *create, *dowhile logics:
-   - use the ANSYS sample input listing for template-examples
+   - use the Ansys sample input listing for template-examples
    - additional dialog boxes with:
      /ui,anno,ksel...,wpse,help,query,copy
    - make outline string in skeletons configurable
    - spider beams, _bolt.mac, screw.mac, Mohr-Coulomb criterion
-   - rework concept with respect to the ANSYS menu structure sort
-     skeletons in menu. Concept: 1.) ANSYS Workflow 2.) specialised
+   - rework concept with respect to the Ansys menu structure sort
+     skeletons in menu. Concept: 1.) Ansys Workflow 2.) specialised
      macro library
    - Make skeleton-header properly working (info "(autotype)")
    - Optimise templates: completing-read, read-from-minibuffer
@@ -460,7 +459,7 @@
      ("aiiges" "aihexa") or better regexp filter "ai.*\\|acf.*"
    - commands shorter than 4 chars are not allowed with additional chars
      adjust this to -highlighting-level 0
-   - Make ANSYS-Mode also working solely with ansys-mode.el??
+   - Make Ansys-Mode also working solely with ansys-mode.el??
    - make M-C-h more intelligent like M-h (if mark...)
    - speed concern: replace -find-duplicate-p with function argument to
      add-to-list
@@ -473,7 +472,7 @@
      possible? No /sol(u) sufficient? Yes condensed input line ($)
      behind commands without arguments possible? Yes have a look in
      -variable-defining-commands!  Warn when - unintentionally -
-     arguments are used for ANSYS commands which do not allow
+     arguments are used for Ansys commands which do not allow
      arguments.  Or implement some auto-newline feature?  But
      problematic in condensed command lines or when applying code
      comments!
@@ -506,19 +505,19 @@
    - highlight matching block keywords (similar to show-paren-mode) when
      point is at keyword
    - Implement highlighting of bracket pairs with the correct level in
-     ANSYS GET- and parametric- functions.
+     Ansys GET- and parametric- functions.
    - highlighting of plot commands inside the /GCMD command
    - DEFSUBSTs with DEFUNs inside aren't particularly helpful?
    - Emphasise better implied (colon) loops n,(1:6),(2:12:2) => n,1,2
      $ n,2,4 $... (little used, I know, but any ideas going beyond the
      colon?).
-   - startup screen for ANSYS mode: Mode help, ANSYS version,
+   - startup screen for Ansys mode: Mode help, Ansys version,
      supressing the startup screen 'ansys-mode-startup-message maybe
      as advice when sluggish -> compiliation
    - Enable choice for /show,3d or x11 (-start-graphics)
-   - Provide a way to send commands to the tcl-tk ANSYS gui (x11
+   - Provide a way to send commands to the tcl-tk Ansys gui (x11
      programming).
-** ANSYS syntax restrictions not (yet) accounted for
+** Ansys syntax restrictions not (yet) accounted for
    - Parentheses can only be nested 4 levels deep and only up to 9
      operations (+,-,*,...) within these set of parentheses
    - PATH name is restricted to 8 chars
@@ -530,7 +529,7 @@
      with /INPUT and *USE)
    - Block level restriction of 10 levels of nested *IF blocks
    - Macro level restriction: 20 macros
-** Unknown ANSYS stuff
+** Unknown Ansys stuff
    - what the heck is the *UILIST command?
    - Is hyper56 a valid element?
 -----
