Prepare the 20.2.0 release

--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-03-09>
+#+DATE: Time-stamp: <2020-03-10>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -40,10 +40,13 @@
     2) open EWW in another window!
     3) why initialising anew any time -mode is called?
     4) find nice style css stuff for html export?
-    5) docu in info mode
+    5) documentation in info mode
     6) Start optionally runbWB2 --aim, Discovery AIM
     7) Ansys is often used synonymous for Ansys MAPDL solver /
        interpreter or Ansys Classics GUI
+** checks
+   - changed file size without warning to 30 MB what is Emacs-26
+     using?
 ** Release proceedures
    package-lint
      - problems with prefix names and default key bindings...
@@ -62,13 +65,9 @@
 
 * TODO 20.2.0 Release
   DEADLINE: <2020-04-08 Mi>
-  Feature freeze [2020-02-27 Do]: Testing of the master branch
+  Feature freeze [2020-02-27 Do]
 ** Todos, bugs
 ** checks
-   - check C-u C-c C-b with various topics )=> Works partly ;-)
-   - Customisation system
-   - changed file size without warning to 30 MB what is Emacs-26
-     using?
 * 20.1.1
    - are the material properties documented, matlib?  Matlib is used
      in -template.el, how about document this directory somewhere?
