--- a/TODO.org
+++ b/TODO.org
@@ -63,11 +63,8 @@
     # (tags-query-replace "ansys+emacs2020.png" "ansys+emacs2020-03.png")
     # (tags-query-replace "ANSYS" "Ansys")
 
-* TODO 20.2.0 Release
-  DEADLINE: <2020-04-08 Mi>
-  Feature freeze [2020-02-27 Do]
-** Todos, bugs
-** checks
+* DONE 20.2.0 Release
+  [2020-03-10 Tue]
 * 20.1.1
    - are the material properties documented, matlib?  Matlib is used
      in -template.el, how about document this directory somewhere?
